# kafka-rs-consumer

./: Cargo.toml  README.md  config.toml  docker-compose.yml
examples/: batch_consumer.rs  json_processor.rs  simple_consumer.rs
scripts/: check_lag.sh  produce_test_messages.sh
src/: backpressure.rs  config.rs  consumer.rs  dlq.rs  error.rs  handler.rs  health.rs  lib.rs  main.rs  metrics.rs  offset.rs  shutdown.rs
tests/: consumer_test.rs  dlq_test.rs  handler_test.rs  offset_test.rs
