[package]
name = "kafka-rs-consumer"
version = "0.1.0"
edition = "2021"
description = "Production-quality high-throughput Kafka consumer framework in Rust"
license = "MIT"
repository = "https://example.com/kafka-rs-consumer"
readme = "README.md"
keywords = ["kafka", "consumer", "rdkafka", "streaming", "async"]
categories = ["asynchronous", "network-programming"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net"] }
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
